# mymoney

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  constants.py  main.py  pyproject.toml  readme.md  spend_calendar.py  styles.css  templates.py  views.py
static/: index.html  styles.css
