[tool.poetry]
name = "mymoney-fastapi"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.1"
fastapi = "^0.68.0"
uvicorn = "^0.14.0"
aiofiles = "^0.7.0"
python-multipart = "^0.0.5"
Jinja2 = "^3.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
